# comfy-ui-tg-webhook

./: .gitignore  README.md  bot.py  pyproject.toml  test.json  token_reader.py
client/: client.py
configuration/: __init__.py  config.py  config.yaml.sample  gallery.py  gen_models.py  localisation.py
configuration/lang/: ru.json
handlers/: generation.py  greeting.py  user_settings.py
keyboards/: __init__.py  keyboards.py
model/: __init__.py  model.py
propagation/: __init__.py  propagation.py
queue/: queue.py
server_queue/: __init__.py  propagation.py  server_queue.py  servers.py
states/: states.py
users/: users.py
utils/: utils.py
workflows/: controller.py
workflows/workflows/: format_check.json  image_to_video.json  t2i_two_passes.json  text_to_image.json  text_to_video.json  triumph_clean.json  triumph_release_v1_i2v_api.json  triumph_release_v2_api.json
