[tool.poetry]
name = "comfy-ui-tg-webhook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.7.0"
pyyaml = "^6.0.1"
pydantic-settings = "^2.3.2"
json-e = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
